--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dexie-react-hooks": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-syntax-highlighter": "^15.5.0",
     "vite-plugin-pwa": "^0.14.7"
   },
